apps/proton/backend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proton-backend
  namespace: proton
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proton-backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: proton-backend
    spec:
      revisionHistoryLimit: 0
      containers:
        - tty: true
          image: ghcr.io/profiidev/proton/proton-backend:master
          imagePullPolicy: Always
          name: proton-backend
          resources:
            limits:
              cpu: 1000m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
          volumeMounts:
            - mountPath: /etc/ssl/certs/e11529a0.0
              subPath: e11529a0.0
              name: cluster-ca-cert
              readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: cluster-ca-cert
          secret:
            defaultMode: 420
            secretName: cluster-ca-cert
