apps/proton/backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: proton-backend
  namespace: proton
spec:
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: proton-backend
  type: ClusterIP
